<resources>
	<string name="app_name">Troff</string>
	<string name="app_name_long">Troff - Training with music</string>
	<string name="app_email">slimsimapps@gmail.com</string>
	<string name="pick_song">Pick a song</string>
	<string name="pick_song_first">You must pick a song first</string>

	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>

	<string name="action_settings">Settings</string>
	<string name="shuffle">Shuffle</string>
	<string name="quit_app">Quit app</string>
	<string name="importTitle">Import</string>
	<string name="gallery">Gallery</string>
	<string name="slideshow">Slideshow</string>
	<string name="tools">Tools</string>
	<string name="communicate">Communicate</string>
	<string name="share">Share</string>
	<string name="send">Send</string>
	<string name="create_marker">Create marker</string>
	<string name="create_marker_at">Create marker at</string>
	<string name="song_list">Song list</string>
	<string name="markers">Markers</string>
	<string name="marker">Marker</string>
	<string name="marker_name">Name</string>
	<string name="marker_color">Color</string>
	<string name="pick_correct_color">You must pick a correct color</string>
	<string name="seconds">seconds</string>
	<string name="end_song_here">End song here</string>
	<string name="edit_marker">Edit marker</string>
	<string name="time_unknown">xx:xx</string>
	<string name="delete">Delete</string>
	<string name="about_to_delete">You are about to delete this marker</string>
	<string name="instr_name_marker">You must give the marker a name</string>
	<string name="instr_correct_marker_time">
		you must give the marker a correct time: mm:ss.mil
	</string>
	<string name="instr_ext_stor_head">
		Media access is required
	</string>
	<string name="instr_ext_stor_body">
		Troff is a music player and will not function without
		"media access"\n\n
		You can set this in\n
		Settings / app / Troff / Permissions\n
		Simply turn on "Storage".
	</string>
	<string name="instr_no_fewer_than_2_markers">You can not have fewer than 2 markers per song.</string>

	<string name="Settings">Settings</string>
	<string name="question_mark">\?</string>
	<string name="_0">0</string>
	<string name="_1">1</string>
	<string name="_2">2</string>
	<string name="_3">3</string>
	<string name="_4">4</string>
	<string name="_5">5</string>
	<string name="_6">6</string>
	<string name="_7">7</string>
	<string name="_8">8</string>
	<string name="_9">9</string>
	<string name="number_of_loops">Number of loops:</string>
	<string name="wait_between">Wait between</string>
	<string name="start_before">Start before</string>
	<string name="stop_after">Stop after</string>
	<string name="pause_before">Pause before</string>
	<string name="_inf">∞</string>
	<string name="end">End</string>
	<string name="start">Start</string>
</resources>
