<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

	<group android:checkableBehavior="single">
		<item
			android:id="@+id/nav_song_list"
			android:icon="@drawable/ic_format_align_justify_black_24dp"
			android:title="@string/song_list"/>
		<item
			android:id="@+id/nav_markers"
			android:icon="@drawable/ic_marker_list"
			android:title="@string/markers"/>
		<item
			android:id="@+id/nav_settings"
			android:icon="@drawable/ic_menu_share"
			android:title="@string/action_settings"/>
<!--
		<item
			android:id="@+id/nav_camera"
			android:icon="@drawable/ic_menu_camera"
			android:title="@string/song_list"/>
		<item
			android:id="@+id/nav_gallery"
			android:icon="@drawable/ic_menu_gallery"
			android:title="@string/gallery"
			android:name="Gallery" />
		<item
			android:id="@+id/nav_slideshow"
			android:icon="@drawable/ic_menu_slideshow"
			android:title="@string/slideshow"
			android:name="Slideshow" />
		<item
			android:id="@+id/nav_manage"
			android:icon="@drawable/ic_menu_manage"
			android:title="@string/tools"
			android:name="Tools" />

-->
	</group>
<!--
	<item
		android:name="Communicate"
		android:title="@string/communicate">
		<menu>
			<item
				android:id="@+id/nav_share"
				android:icon="@drawable/ic_menu_share"
				android:title="@string/share"
				android:name="Share" />
			<item
				android:id="@+id/nav_send"
				android:icon="@drawable/ic_menu_send"
				android:title="@string/send"
				android:name="Send" />
		</menu>
	</item>
-->
</menu>
