<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp" >

    <LinearLayout
        android:id="@+id/edit_marker_time_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_marker_at"
            />

        <EditText
            android:id="@+id/marker_time"
            android:inputType="numberDecimal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seconds"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/marker_name"
            android:paddingEnd="@dimen/fab_margin"
            android:paddingRight="@dimen/fab_margin"
            android:paddingStart="0dp"
            android:paddingLeft="0dp"
            android:textSize="20sp"
            />
        <EditText
            android:id="@+id/marker_title"
            android:inputType="text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/fab_margin"
            android:paddingRight="@dimen/fab_margin"
            android:paddingStart="0dp"
            android:paddingLeft="0dp"
            android:textSize="20sp"
            />
    </LinearLayout>

</LinearLayout>